<resources>
    <string name="app_name">SNMC</string>

    <string name="title_section1">Prayers</string>
    <string name="title_section2">Events</string>
    <string name="title_section3">Donate</string>
    <string name="title_section4">Youth</string>
    <string name="title_section5">Services</string>
    <string name="prayerHeader">Prayer</string>
    <string name="azaanHeader">Azaan</string>
    <string name="iqamaHeader">Iqama</string>

    <string name="Fajr">Fajr</string>
    <string name="Zuhr">Zuhr</string>
    <string name="Asar">Asar</string>
    <string name="Meghrib">Meghrib</string>
    <string name="Isha">Isha</string>
    <string name="no_connection_message">Please connect to Internet to access this page.</string>

    <string name="hello_world">Bismillah Irahman Iraheem</string>
    <string name="action_contact">Contact</string>

    <string name="minutes">Minutes</string>
    <string name="hour">Hours</string>
    <string name="_2018">2018</string>
    <string name="time_to_nnext_iqama">Time to \nnext Iqama</string>
    <string name="at_snmc">at SNMC</string>
    <string name="title">Title</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="description">Description</string>
    <string name="link">Link</string>
    <string name="connect_internet">Please make sure you are connected to the Internet to update this page.</string>
    <string name="redirect_snmc_donate">Please wait while you are being redirected to the secure SNMC donation site. It may take some time.</string>
    <string name="jumaah_prayer">Jumaah Prayer</string>
    <string name="please_wait_while_you_are_being_redirected_to_the_snmc_services_site">Please wait while you are being redirected to the SNMC Services site.</string>
    <string name="heading">Heading</string>
    <string name="item">Item</string>
    <string name="rate">Rate</string>
    <string name="feedback">Feedback</string>
    <string name="redirect_newsletter">Please wait while you are being redirected to the SNMC Newsletter site. It may take some time.</string>
    <string name="About">About</string>
    <string name="disclaimer_text">This is an unofficial SNMC app release, and is pending approval. Efforts have been made to give up-to-date information but it may contain errors. The content is provided for general information only and the information contained within is provided on an “as is” basis. \n\nFeedback will be appreciated if you find any inaccuracies.\n\nTeam Azure</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="share">Share App</string>


</resources>
