<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity1">
    <item android:id="@+id/action_contact" android:title="@string/action_contact"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_rate" android:title="@string/rate"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/sendFeedback" android:title="@string/feedback"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/share" android:title="@string/share"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/disclaimer" android:title="@string/disclaimer"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
